--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Aine-Bot",
+    "name": "Andre22-Bot",
     "version": "07.06.98",
     "description": "Customizable WhatsApp Bot",
     "depecrated": false,
